--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 nppBackup*
 nppBackup/
+*.iso
+kernel/obj/*.o
+kernel/obj/*.ppu
+kernel/obj/*.a
+rtl/units/i386-fpos/*.o
+rtl/units/i386-fpos/*.ppu
+rtl/units/i386-fpos/*.a
+rtl/units/i386-fpos/*.rst
+
